cbits/Bullet.h

void btDiscreteDynamicsWorld_removeRigidBody(void *c,void* p0); //method: removeRigidBody void ( ::btDiscreteDynamicsWorld::* )( ::btRigidBody * ) 
void btDiscreteDynamicsWorld_integrateTransforms(void *c,float p0); //method: integrateTransforms void ( ::btDiscreteDynamicsWorld::* )( ::btScalar ) 
void btDiscreteDynamicsWorld_debugDrawConstraint(void *c,void* p0); //method: debugDrawConstraint void ( ::btDiscreteDynamicsWorld::* )( ::btTypedConstraint * ) 
void btDiscreteDynamicsWorld_debugDrawWorld(void *c); //method: debugDrawWorld void ( ::btDiscreteDynamicsWorld::* )(  ) 
void btDiscreteDynamicsWorld_calculateSimulationIslands(void *c); //method: calculateSimulationIslands void ( ::btDiscreteDynamicsWorld::* )(  ) 
void btDiscreteDynamicsWorld_addConstraint(void *c,void* p0,int p1); //method: addConstraint void ( ::btDiscreteDynamicsWorld::* )( ::btTypedConstraint *,bool ) 
void btDiscreteDynamicsWorld_startProfiling(void *c,float p0); //method: startProfiling void ( ::btDiscreteDynamicsWorld::* )( ::btScalar ) 
void btDiscreteDynamicsWorld_updateActivationState(void *c,float p0); //method: updateActivationState void ( ::btDiscreteDynamicsWorld::* )( ::btScalar ) 
void btDiscreteDynamicsWorld_getGravity(void *c,float* ret); //method: getGravity ::btVector3 ( ::btDiscreteDynamicsWorld::* )(  ) const
void btDiscreteDynamicsWorld_removeAction(void *c,void* p0); //method: removeAction void ( ::btDiscreteDynamicsWorld::* )( ::btActionInterface * ) 
void btDiscreteDynamicsWorld_removeCharacter(void *c,void* p0); //method: removeCharacter void ( ::btDiscreteDynamicsWorld::* )( ::btActionInterface * ) 
void btDiscreteDynamicsWorld_saveKinematicState(void *c,float p0); //method: saveKinematicState void ( ::btDiscreteDynamicsWorld::* )( ::btScalar ) 
void* btDiscreteDynamicsWorld_getConstraint(void *c,int p0); //method: getConstraint ::btTypedConstraint * ( ::btDiscreteDynamicsWorld::* )( int ) 
void* btDiscreteDynamicsWorld_getConstraint0(void *c,int p0); //method: getConstraint ::btTypedConstraint * ( ::btDiscreteDynamicsWorld::* )( int ) 
void* btDiscreteDynamicsWorld_getConstraint1(void *c,int p0); //method: getConstraint ::btTypedConstraint const * ( ::btDiscreteDynamicsWorld::* )( int ) const
void* btDiscreteDynamicsWorld_getConstraintSolver(void *c); //method: getConstraintSolver ::btConstraintSolver * ( ::btDiscreteDynamicsWorld::* )(  ) 
//not supported method: getSimulationIslandManager ::btSimulationIslandManager * ( ::btDiscreteDynamicsWorld::* )(  ) 
// error:  - unsupported

//not supported method: getSimulationIslandManager ::btSimulationIslandManager * ( ::btDiscreteDynamicsWorld::* )(  ) 
// error:  - unsupported

//not supported method: getSimulationIslandManager ::btSimulationIslandManager const * ( ::btDiscreteDynamicsWorld::* )(  ) const
// error:  - unsupported

void btDiscreteDynamicsWorld_addCharacter(void *c,void* p0); //method: addCharacter void ( ::btDiscreteDynamicsWorld::* )( ::btActionInterface * ) 
void btDiscreteDynamicsWorld_solveConstraints(void *c,void* p0); //method: solveConstraints void ( ::btDiscreteDynamicsWorld::* )( ::btContactSolverInfo & ) 
//not supported method: getWorldType ::btDynamicsWorldType ( ::btDiscreteDynamicsWorld::* )(  ) const
// error:  - unsupported

void btDiscreteDynamicsWorld_updateActions(void *c,float p0); //method: updateActions void ( ::btDiscreteDynamicsWorld::* )( ::btScalar ) 
void btDiscreteDynamicsWorld_updateVehicles(void *c,float p0); //method: updateVehicles void ( ::btDiscreteDynamicsWorld::* )( ::btScalar ) 
void btDiscreteDynamicsWorld_synchronizeSingleMotionState(void *c,void* p0); //method: synchronizeSingleMotionState void ( ::btDiscreteDynamicsWorld::* )( ::btRigidBody * ) 
void btDiscreteDynamicsWorld_addVehicle(void *c,void* p0); //method: addVehicle void ( ::btDiscreteDynamicsWorld::* )( ::btActionInterface * ) 
void btDiscreteDynamicsWorld_synchronizeMotionStates(void *c); //method: synchronizeMotionStates void ( ::btDiscreteDynamicsWorld::* )(  ) 
int btDiscreteDynamicsWorld_stepSimulation(void *c,float p0,int p1,float p2); //method: stepSimulation int ( ::btDiscreteDynamicsWorld::* )( ::btScalar,int,::btScalar ) 
void btDiscreteDynamicsWorld_removeCollisionObject(void *c,void* p0); //method: removeCollisionObject void ( ::btDiscreteDynamicsWorld::* )( ::btCollisionObject * ) 