Physics/Bullet/Raw/BulletDynamics/Dynamics.chs

{#fun btDiscreteDynamicsWorld_removeRigidBody as btDiscreteDynamicsWorld_removeRigidBody    `( BtDiscreteDynamicsWorldClass bc , BtRigidBodyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#63>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_integrateTransforms as btDiscreteDynamicsWorld_integrateTransforms    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ timeStep
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#138>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_debugDrawConstraint as btDiscreteDynamicsWorld_debugDrawConstraint    `( BtDiscreteDynamicsWorldClass bc , BtTypedConstraintClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ constraint
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#140>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_debugDrawWorld as btDiscreteDynamicsWorld_debugDrawWorld    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#65>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_calculateSimulationIslands as btDiscreteDynamicsWorld_calculateSimulationIslands    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#99>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_addConstraint as btDiscreteDynamicsWorld_addConstraint    `( BtDiscreteDynamicsWorldClass bc , BtTypedConstraintClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ constraint
,  `Bool'  -- ^ disableCollisionsBetweenLinkedBodies
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#73>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_startProfiling as btDiscreteDynamicsWorld_startProfiling    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ timeStep
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#69>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_updateActivationState as btDiscreteDynamicsWorld_updateActivationState    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ timeStep
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#124>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_getGravity as btDiscreteDynamicsWorld_getGravity    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#105>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_removeAction as btDiscreteDynamicsWorld_removeAction    `( BtDiscreteDynamicsWorldClass bc , BtActionInterfaceClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ arg0
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#182>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_removeCharacter as btDiscreteDynamicsWorld_removeCharacter    `( BtDiscreteDynamicsWorldClass bc , BtActionInterfaceClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ character
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#78>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_saveKinematicState as btDiscreteDynamicsWorld_saveKinematicState    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ timeStep
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#148>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_getConstraint0 as btDiscreteDynamicsWorld_getConstraint    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtTypedConstraint'  mkBtTypedConstraint* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#148>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_getConstraint0 as btDiscreteDynamicsWorld_getConstraint0    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtTypedConstraint'  mkBtTypedConstraint* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#150>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_getConstraint1 as btDiscreteDynamicsWorld_getConstraint1    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtTypedConstraint'  mkBtTypedConstraint* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#144>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_getConstraintSolver as btDiscreteDynamicsWorld_getConstraintSolver    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtConstraintSolver'  mkBtConstraintSolver* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#180>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_addCharacter as btDiscreteDynamicsWorld_addCharacter    `( BtDiscreteDynamicsWorldClass bc , BtActionInterfaceClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ character
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#67>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_solveConstraints as btDiscreteDynamicsWorld_solveConstraints    `( BtDiscreteDynamicsWorldClass bc , BtContactSolverInfoClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ solverInfo
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#71>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_updateActions as btDiscreteDynamicsWorld_updateActions    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ timeStep
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#170>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_updateVehicles as btDiscreteDynamicsWorld_updateVehicles    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ timeStep
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#97>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_synchronizeSingleMotionState as btDiscreteDynamicsWorld_synchronizeSingleMotionState    `( BtDiscreteDynamicsWorldClass bc , BtRigidBodyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#176>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_addVehicle as btDiscreteDynamicsWorld_addVehicle    `( BtDiscreteDynamicsWorldClass bc , BtActionInterfaceClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ vehicle
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#94>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_synchronizeMotionStates as btDiscreteDynamicsWorld_synchronizeMotionStates    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#91>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_stepSimulation as btDiscreteDynamicsWorld_stepSimulation    `( BtDiscreteDynamicsWorldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ timeStep
,  `Int'  -- ^ maxSubSteps
,  `Float'  -- ^ fixedTimeStep
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#135>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
{#fun btDiscreteDynamicsWorld_removeCollisionObject as btDiscreteDynamicsWorld_removeCollisionObject    `( BtDiscreteDynamicsWorldClass bc , BtCollisionObjectClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ collisionObject
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h?r=2223#142>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp?r=2223>
-}
